# dictyviz

./: .gitignore  .gitmodules  README.md  calcOrthoMaxProjs.py  compressMovies.sh  dfome.py  dfome_tests.ipynb  dictyfunc.py  dictyviz.py  dictyviz_tests.ipynb  environment.yaml  environment.yml  makeOrthoMaxProjMovies.py  makeOrthoProjMovies.py  optical3dflow_environment.yml  opticalflow3d_environment.yml  pyproject.toml  sample_parameters.json
scripts/: AVIMakeOpticalFlowMovie.py  AVIOpticalFlow.py  __init__.py  calcMaxProjections.sh  calcOrthoMaxProjs.py  calcSlicedOrthoMaxProjs.py  calc_ortho_max_projs.py  calc_sliced_ortho_max_projs.py  combinedMovie.py  combined_movie.py  compressMovies.sh  generate3Dopticalflow.sh  generateCombinedMovie.sh  generateFrameMovie.sh  generateOpticalFlow.sh  generateOrthoMaxMovies.sh  generateZStackMovie.sh  generate_combined_movie.sh  generate_ortho_max_movies.sh  generate_zstack_movie.sh  makeFrameMovie.py  makeOpticalFlowMovie.py  makeOrthoProjMovies.py  makeZStackMovie.py  make_ortho_proj_movies.py  opticalFlow.py  visualize_raw_data.py
scripts/OpticalFlow/: 3Dflow.py  3Dopticalflow.py  AVIMakeOpticalFlowMovie.py  AVIOpticalFlow.py  __init__.py  averageFrames.py  calcOrthoFlowMaxProjections.py  findRegions.py  flowVisualization.py  generate3Dflow.sh  generate3Dflowvisualization.sh  generateFindRegions.sh  generateFlowVisualization.sh  generateFrameAvgFlow.sh  generateMovieSliceVisualization.sh  generateOpticalFlow.sh  generateOrthoFlowMaxMovies.sh  generateSliceVisualization.sh  generateUpwardZFlow.sh  loadingData.ipynb  makeOpticalFlowMovie.py  makeOrthoFlowMaxMovies.py  movieSliceVisualization.py  newOpticalFlow.py  opticalFlow.py  sliceVisualization.py  upwardZFlow.py  visualize3dflow.py
scripts/OpticalFlow/2Dopticalflow/: generateOpticalFlow.sh  generateSlicedOpticalFlow.sh  generateTestParameters.sh  opticalFlow.py  slicedOpticalFlow.py  testParameters.py
scripts/OpticalFlow/helpers/: __init__.py  analyzeRegions.py  flowLoader.py  helpers.py
scripts/OpticalFlow/optical2Dflow/: __init__.py  generateOpticalFlow.sh  generateSlicedOpticalFlow.sh  generateTestParameters.sh  opticalFlow.py  slicedOpticalFlow.py  testParameters.py
scripts/OpticalFlow/opticalFlow2D/: opticalFlow.py  slicedOpticalFlow.py
scripts/segmentation/: generateTrackingData.sh  generate_tracking_data.sh  removeCellShadows.py  remove_cell_shadows.py  segmentRocks.py  segmentTrackRocks.py  segmentTrackRocks3D.py  segment_track_rocks.py  segment_track_rocks_3d.py  visualize_results.py
src/: __init__.py  dictyviz.py  utils.py
src/dictyviz/: __init__.py  utils.py  visualization.py
