[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dictyviz"
version = "0.1.0"
description = "Tools to generate orthogonal maximum intensity projections and movies from 4D zarr imaging datasets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jennifer Hill", email = "hillj@janelia.hhmi.org"},
]
keywords = ["microscopy", "imaging", "zarr", "visualization", "optical-flow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
    "zarr",
    "opencv-python>=4.11.0",
    "opencv-contrib-python>=4.11.0",
    "cmapy>=0.6.6",
    "pillow",
    "dask[distributed]>=2024.0.0",
    "tqdm",
    "scipy",
    "fonttools>=4.56.0",
    "pyparsing>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.0",
    "napari-ome-zarr>=0.6.0",
    "pyqt5>=5.15.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

jupyter = [
    "jupyterlab>=4.0.0",
    "napari-ome-zarr>=0.6.0",
    "pyqt5>=5.15.0",
]

all = [
    "dictyviz[dev,jupyter]",
]

[project.urls]
Homepage = "https://github.com/sgrolab/dictyviz"
Repository = "https://github.com/sgrolab/dictyviz"
Issues = "https://github.com/sgrolab/dictyviz/issues"

[tool.setuptools]
packages = ["dictyviz"]
package-dir = {"dictyviz" = "src"}

[tool.setuptools.package-data]
dictyviz = ["../fonts/Lato2OFL/*.ttf", "../fonts/Lato2OFL/*.txt"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | OpticalFlow3d
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=dictyviz",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "OpticalFlow3d/",
    "build/",
    "dist/",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "OpticalFlow3d",
]
